--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,6 +3,7 @@
 
 employee.firstName = First name
 employee.lastName = Last name
+employee.birthday = Birth date
 
 #######################
 
@@ -15,6 +16,8 @@ Size.employee.firstName = {0} can have max {1} and min {2} characters.
 # First name can have max 12 and min 2 characters.
 
 #Last name example
-
 NotBlank.employee.lastName = {0} is a required field.
 Size.employee.lastName = {0} can have max {1} and min {2} characters!
+
+#Birthday example
+NotNull.employee.birthday = {0} can not be empty.
